--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <h1>Recettes de cuisines</h1>
     <ul>
       <li>
-        <a href="/recipes-list/nuggets.html">Nuggets de poulet</a>
+        <a href="recipes-list/nuggets.html">Nuggets de poulet</a>
       </li>
       <li>
-        <a href="/recipes-list/lasagna.html">Lasagne</a>
+        <a href="recipes-list/lasagna.html">Lasagne</a>
       </li>
       <li>
-        <a href="/recipes-list/crepes.html">Crêpes</a>
+        <a href="recipes-list/crepes.html">Crêpes</a>
       </li>
       <li>
-        <a href="/recipes-list/pizza.html">Pizza</a>
+        <a href="recipes-list/pizza.html">Pizza</a>
       </li>
     </ul>
   </body>
